feat: 引数で挙動を出し分ける機能を追加

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Run",
+            "name": "Get Boards",
             "type": "python",
             "request": "launch",
             "program": "${workspaceRoot}/main.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "args": [
+                "--mode", "boards"
+            ]
         }
     ]
 }
