feat: アクション一覧を取得する機能を追加

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Get Actions",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceRoot}/main.py",
+            "console": "integratedTerminal",
+        },
+        {
             "name": "Get Boards",
             "type": "python",
             "request": "launch",
