--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,21 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Get Report Mock",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceRoot}/main.py",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Get Actions Mock",
             "type": "python",
             "request": "launch",
             "program": "${workspaceRoot}/main.py",
             "console": "integratedTerminal",
+            "args": [
+                "--mode", "actions"
+            ]
         },
         {
             "name": "Get Actions Production",
@@ -18,6 +28,7 @@
             "program": "${workspaceRoot}/main.py",
             "console": "integratedTerminal",
             "args": [
+                "--mode", "actions",
                 "--prod"
             ]
         },
